# stdai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
6c/384cfa84c0f6c2f61eed2dc1e6da6d3d7bf793/: metadata.json
7f/f4a334763c566ec634f06f2beaacda80bff0e6/: metadata.json
de/2ceab32896d1dff4b13a124b2821cc6f4342d7/: metadata.json
de/2ceab32896d1dff4b13a124b2821cc6f4342d7/1/: metadata.json  transcript.json
skills/core/: SKILL.md
src/: artifact.rs  cli.rs  error.rs  main.rs  metadata.rs
src/commands/: context.rs  doctor.rs  downstream.rs  find.rs  identity.rs  init.rs  list.rs  mod.rs  projects.rs  show.rs  upstream.rs  verify.rs  write.rs
src/identity/: address.rs  keys.rs  mod.rs  signing.rs
src/storage/: db.rs  migration.rs  mod.rs  objects.rs
tests/: integration.rs
tests/common/: mod.rs
