[package]
name = "stdai"
version = "1.2.0"
edition = "2021"
description = "A CLI primitive for retained agent work"
license = "Apache-2.0"
repository = "https://github.com/ooboai/stdai"
readme = "README.md"
keywords = ["cli", "agent", "artifacts", "lineage", "pipeline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
ulid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
